# Algo_CT

./: README.md
orusov_t_d/: CMakeLists.txt
orusov_t_d/prj.codeforces/0071a/: 0071a.cpp
orusov_t_d/prj.codeforces/1338d/: 1338d.cpp
orusov_t_d/prj.codeforces/1553d/: 1553d.cpp
orusov_t_d/prj.lab/: CMakeLists.txt
orusov_t_d/prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.h  test.cpp
orusov_t_d/prj.lab/m3i/: CMakeLists.txt  m3i.cpp  m3i.h  test.cpp
orusov_t_d/prj.lab/rational/: CMakeLists.txt  Makefile  rational.cpp  rational.h  test.cpp
project/: CMakeLists.txt  README.md  externalpolyhedronautomata.cpp  externalpolyhedronautomata.h  test.cpp
project/source/: CMakeLists.txt
project/source/externalpolyhedronautomata/: CMakeLists.txt  externalpolyhedronautomata.cpp  externalpolyhedronautomata.h  test.cpp
